--- a/decode-codec.html
+++ b/decode-codec.html
@@ -68,40 +68,60 @@ function bitSet32(val, bit) {
 	return (val & Math.pow(2, bit))
 }
 
-function HEVCprofile(str, cap, gopocf) {
-	if (str=="1" || bitSet32(cap,1))
+function HEVCprofile(general_profile_idc, cap, gopocf) {
+	if (general_profile_idc==1 || bitSet32(cap,1))
 		return "Main (1)"
 	
-	if (str=="2" && gopocf) 
-		return "Main 10 Still Picture"
-		
-	if (str=="2" || bitSet32(cap,2))
-		return "Main 10 (2)"
+	if (general_profile_idc==2 || bitSet32(cap,2))
+		return "Main 10 "+(gopocf?"Still Picture ":"")+"(2)"
 	
-	if (str=="3" || bitset32(cap,3))	
-		return "Main Still Pictire (3)"
+	if (general_profile_idc==3 || bitSet32(cap,3))	
+		return "Main Still Picture (3)"
 		
-	if (str=="4" || bitset32(cap,4))
+	if (general_profile_idc==4 || bitSet32(cap,4))
 		return "Range Extensions (4)"
+
+	if (general_profile_idc==5 || bitSet32(cap,5))
+		return "High Throughput (5)"
 	
-	return "unknown"
+	if (general_profile_idc==9 || bitSet32(cap,9))
+		return "Screen Content Coding (9)"
+
+	if (general_profile_idc==11 || bitSet32(cap,11))
+		return "High Throughput Screen Content Coding (11)"
+	
+	return err("unknown")
 
 }
 function decodeHEVC(val) {
 	var parts=val.split(".")
 
-
 	if (parts.length<5) 
 		return err("HEVC codec requires at least 5 parts")+BREAK
 
-	let argErr=""		
-	let general_profile_idc=parseInt(parts[1])
+	let argErr="", res=""		
 	
 	if (!hexDigits(parts[2]))
 		argErr+=err("general_profile_compatibility_flag not expressed in hexadecimal ("+parts[2]+")")+BREAK
  
+	let general_profile_compatibility_flag=sscanf(parts[2], "%x")	
+	let general_profile_idc=-1, general_profile_space=-1
+	
+	if (parts[1][0]=="A" || parts[1][0]=="B" || parts[1][0]=="C") {
+		let gp=sscanf(parts[1], "%c%d")
+		switch (gp[0].toUpperCase()) {
+			case "A": general_profile_space=1; break
+			case "B": general_profile_space=2; break
+			case "C": general_profile_space=3; break
+		}
+		general_profile_idc=gp[1]
+	}
+	else {
+		general_profile_space=0
+		general_profile_idc=sscanf(parts[1], "%d")
+	}
  
-	// first process the constraints as we need to extract the general_one_picture_only_constraint_flag
+	// process the constraints as we need to extract the general_one_picture_only_constraint_flag
 
 	let constraintFlags=new BitList()
 	let i=4, constraints="", general_one_picture_only_constraint_flag=0	
@@ -119,8 +139,6 @@ function decodeHEVC(val) {
 
 	if (argErr.length)
 		return argErr
-
-	let general_profile_compatibility_flag=sscanf(parts[2], "%x")	
 
 	constraints+="<i>constraintFlags="+ constraintFlags.toString() +"</i>"+BREAK
 	
@@ -196,27 +214,10 @@ function decodeHEVC(val) {
 	else {
 		// general_reserved_zero_bit
 	}
-		
-	let res=""
 
-	switch (parts[1].length) {
-		case 1:
-			res+="general_profile_space=0"+BREAK
-			res+="general_profile_idc="+HEVCprofile(parts[1][0], general_profile_compatibility_flag, general_one_picture_only_constraint_flag)
-			break
-		case 2:
-			switch (parts[1][0].toUpperCase()) {
-				case "A": res+="general_profile_space=1"; break;
-				case "B": res+="general_profile_space=2"; break;
-				case "C": res+="general_profile_space=3"; break;
-				default: res+="general_profile_space error"
-			}
-			res+="general_profile_idc="+HEVCprofile(parts[1][1], general_profile_compatibility_flag, general_one_picture_only_constraint_flag)
-			break
-		default:
-			res+=err("general_profile error")
-	}
-	res+=BREAK
+	res+="general_profile_space="+(general_profile_space==-1?err(general_profile_space):general_profile_space)+BREAK
+	res+="general_profile_idc="+HEVCprofile(general_profile_idc, general_profile_compatibility_flag, general_one_picture_only_constraint_flag)+BREAK
+		
 	let tier=sscanf(parts[3], "%c%d")
 	switch (tier[0].toUpperCase()) {
 		case "L": res+="Main Tier (L)"; break
@@ -375,7 +376,7 @@ function checkCodec() {
 	
 	val=document.getElementById("param").value;
 	res=decode(val);
-	document.getElementById("results").innerHTML="<hr><h2>Results</h2><br>"+res;
+	document.getElementById("results").innerHTML="<hr><h2>Results</h2>"+BREAK+res;
 }
 </script>
 
