--- a/decode-codec.html
+++ b/decode-codec.html
@@ -258,12 +258,11 @@ function decodeAVC(val) {
 		// constraint 012345--
 		// bit        76543210	
 		if (constraint<0 || constraint>5) return false;
-		return (val & Math.pow(2, 7-constraint))	
+		return (val & Math.pow(2, 7-constraint))?true:false	
 	}
 
 	var parts=val.split(".")
 	let res=""
-//	res+="[1]="+parts[0]+" [2]="+parts[1]+BREAK
 	
 	if (parts.length!=2)
 		return err("invalid format")+BREAK
@@ -272,37 +271,37 @@ function decodeAVC(val) {
 		return err("invalid parameters length ("+parts[1].length+") - should be 6")+BREAK
 	
 	if (!hexDigits(parts[1])) 
-		return err("parameters contains non-hex digits")+BREAK
-		
+		return err("parameters contains non-hex digits")+BREAK	
 	
 	let prof=sscanf(parts[1], "%2x%2x%2x")	
 	res+="profile_idc="+prof[0]+" constraint_set="+prof[1]+" level_idc="+prof[2]+BREAK
 	
 	res+="profile="
 	switch (prof[0]) {
-		case 66: res+=AVCconstraint(prof[1], 1)?"Constrained ":""+"Baseline"; break
-		case 77: res+="Main"; break
-		case 100: 
+		case 0x42: res+=(AVCconstraint(prof[1], 1)?"Constrained ":"")+"Baseline"; break
+		case 0x4d: res+=(AVCconstraint(prof[1], 1)?"Constrained ":"")+"Main"; break
+		case 0x64: 
 			if (AVCconstraint(prof[1], 4) && !AVCconstraint(prof[1], 5))
 				res+="Progressive "
-			if (AVCconstraint(prof[1], 4) && AVCconstraint(prof[1], 5))
+			if (!AVCconstraint(prof[1], 4) && AVCconstraint(prof[1], 5))
 				res+="Constrained "	
 			res+="High"; break
-		case 122: res+="High 4:2:2"+AVCconstraint(prof[1], 3)?" Intra":""; break
-		case 110: res+="High 10"+AVCconstraint(prof[1], 3)?" Intra":""; break
-		case 144: res+="High 4:4:4"+AVCconstraint(prof[1], 3)?" Intra":""; break
-		case 88: res+="Extended"; break
-		case 83: res+="Scalable "+AVCconstraint(prof[1], 5)?"Constrained ":""+"Base"; break
-		case 86: res+="Scalable "
-			if (AVCconstraint(prof[1], 5) && !AVCconstraint(prof[1], 3)) res+="Constrained "
+		case 0x7a: res+="High 4:2:2"+(AVCconstraint(prof[1], 3)?" Intra":""); break
+		case 0x63: res+="High 10"+(AVCconstraint(prof[1], 3)?" Intra":""); break
+		case 0xf4: res+="High 4:4:4 "+(AVCconstraint(prof[1], 3)?" Intra":" Predictive"); break
+		case 0x58: res+="Extended"; break
+		case 0x2c: res+="CAVLC 4:4:4"; break
+		case 0x53: res+="Scalable "+(AVCconstraint(prof[1], 5)?"Constrained ":""+"Base"); break
+		case 0x56: res+="Scalable "
+			if (!AVCconstraint(prof[1], 3) && AVCconstraint(prof[1], 5)) res+="Constrained "
 			if (AVCconstraint(prof[1], 3) && !AVCconstraint(prof[1], 5)) res+="Intra "
 			res+="High"; break
-		case 118: res+="Multiview High"; break
-		case 128: res+="Stereo High"; break
-		case 134: res+="MFC High"; break
-		case 135: res+="MFC Depth High"; break
-		case 138: res+="Multiview Depth High High"; break
-		case 139: res+="Enhanced Multiview Depth High High"; break
+		case 0x76: res+="Multiview High"; break
+		case 0x80: res+="Stereo High"; break
+		case 0x86: res+="MFC High"; break
+		case 0x87: res+="MFC Depth High"; break
+		case 0x8a: res+="Multiview Depth High High"; break
+		case 0x8b: res+="Enhanced Multiview Depth High High"; break
 		default:
 			res+=err("unknown")					
 	}
@@ -316,7 +315,7 @@ function decodeAVC(val) {
 	res+="level="
 	switch (prof[2]) {
 		case 10: res+="1"; break
-		case 11: res+=AVCconstraint(prof[1], 3)?"1b":"1.1"; break
+		case 11: res+=(AVCconstraint(prof[1], 3)?"1b":"1.1"); break
 		case 12: res+="1.2"; break
 		case 13: res+="1.3"; break
 		case 20: res+="2"; break
