--- a/decode-codec.html
+++ b/decode-codec.html
@@ -18,7 +18,8 @@
 <script src="./decode-av1.js" type="text/javascript"></script>
 <script src="./decode-avc.js" type="text/javascript"></script>
 <script src="./decode-hevc.js" type="text/javascript"></script>
-
+<script src="./decode-evc.js" type="text/javascript"></script>
+<script src="./decode-mpegH.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 /** TODO
