--- a/decode-codec.html
+++ b/decode-codec.html
@@ -19,6 +19,7 @@
 <script src="./decode-avc.js" type="text/javascript"></script>
 <script src="./decode-hevc.js" type="text/javascript"></script>
 <script src="./decode-evc.js" type="text/javascript"></script>
+<script src="./decode-vvc.js" type="text/javascript"></script>
 <script src="./decode-mpegH.js" type="text/javascript"></script>
 
 <script type="text/javascript">
