--- a/decode-codec.html
+++ b/decode-codec.html
@@ -21,10 +21,11 @@
 <script src="./decode-evc.js" type="text/javascript"></script>
 <script src="./decode-vvc.js" type="text/javascript"></script>
 <script src="./decode-mpegH.js" type="text/javascript"></script>
+<script src="./decode-vp9.js" type="text/javascript"></script>
+
 
 <script type="text/javascript">
 /** TODO
- hev1.1.6.L93.B0  - HEVC progressive, non-packed stream, Main Profile, Main Tier, Level 3.1
  vp09.00.50.08    - VP9, Profile 0, Level 5, 8-bit
  */
 
