--- a/decode-codec.html
+++ b/decode-codec.html
@@ -12,6 +12,7 @@
 <div id="results"/>
 
 <script src="./decode.js" type="text/javascript"></script>
+<script src="./decode-misc.js" type="text/javascript"></script>
 <script src="./sscanf-func.js" type="text/javascript"></script> 
 
 <script src="./decode-aac.js" type="text/javascript"></script>
