add AVS3 decoding

--- a/decode-codec.html
+++ b/decode-codec.html
@@ -18,6 +18,7 @@
 <script src="./decode-aac.js" type="text/javascript"></script>
 <script src="./decode-av1.js" type="text/javascript"></script>
 <script src="./decode-avc.js" type="text/javascript"></script>
+<script src="./decode-avs.js" type="text/javascript"></script>
 <script src="./decode-hevc.js" type="text/javascript"></script>
 <script src="./decode-evc.js" type="text/javascript"></script>
 <script src="./decode-vvc.js" type="text/javascript"></script>
