--- a/decode-codec.html
+++ b/decode-codec.html
@@ -11,7 +11,9 @@
 </p>
 <div id="results"/>
 
+<script type="module" import { sscanf } from "./sscanf-func.js"></script>
 <script src="./decode.js" type="text/javascript"></script>
+<!-- <script src="./sscanf-func.js" type="text/javascript"></script>  -->
 <script src="./decode-misc.js" type="text/javascript"></script>
 <script src="./sscanf-func.js" type="text/javascript"></script> 
 
