--- a/decode-codec.html
+++ b/decode-codec.html
@@ -24,7 +24,7 @@
 <script src="./decode-vvc.js" type="text/javascript"></script>
 <script src="./decode-mpegH.js" type="text/javascript"></script>
 <script src="./decode-vp9.js" type="text/javascript"></script>
-
+<script src="./decode-ac4.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
