add subtitling support

--- a/decode-codec.html
+++ b/decode-codec.html
@@ -25,6 +25,8 @@
 <script src="./decode-mpegH.js" type="text/javascript"></script>
 <script src="./decode-vp9.js" type="text/javascript"></script>
 <script src="./decode-ac4.js" type="text/javascript"></script>
+<script src="./decode-text.js" type="text/javascript"></script>
+
 
 <script type="text/javascript">
 
