--- a/src/decode-codec.html
+++ b/src/decode-codec.html
@@ -12,6 +12,7 @@
 <div id="results"/>
 
 <script src="./decode.js" type="text/javascript"></script>
+<script src="./dvb-mapping.js" type="text/javascript"></script>
 <script src="./decode-misc.js" type="text/javascript"></script>
 <script src="./sscanf-func.js" type="text/javascript"></script> 
 
@@ -23,10 +24,13 @@
 <script src="./decode-evc.js" type="text/javascript"></script>
 <script src="./decode-vvc.js" type="text/javascript"></script>
 <script src="./decode-mpegH.js" type="text/javascript"></script>
+<script src="./decode-mpeg.js" type="text/javascript"></script>
+<script src="./decode-vc1.js" type="text/javascript"></script>
 <script src="./decode-vp9.js" type="text/javascript"></script>
 <script src="./decode-ac4.js" type="text/javascript"></script>
 <script src="./decode-text.js" type="text/javascript"></script>
 
+<script src="main.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
